--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,17 @@
 {
   "main": "dist/index.js",
   "scripts": {
-    "build" : "npx tsc",
-    "start" : "node dist/index.js",
-    "dev"   : "nodemon src/index.ts",
-    "lint"  : "eslint . --ext .ts"
+    "build": "tsc",
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.3",
